<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PracticalTest01Var03MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/first_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:saveEnabled="false"
        android:text="@string/first"
        android:textSize="20sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/plus_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/plus"/>

        <Button
            android:id="@+id/minus_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/minus"/>

    </LinearLayout>

    <EditText
        android:id="@+id/second_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:saveEnabled="false"
        android:text="@string/second"
        android:textSize="20sp"/>


    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/navigate_to_second_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/navigate_to_second_activity"/>

</LinearLayout>